[package]
name = "spindle"
version = "0.2.3"
edition = "2021"
authors = ["sarah quiñones <sarah@veganb.tw>"]
description = "rayon-based threadpool"
readme = "README.md"
repository = "https://github.com/sarah-quinones/spindle"
license = "MIT"
rust-version = "1.84.0"

[dependencies]
atomic-wait = "1.1.0"
crossbeam = "0.8.4"
equator = "0.4.2"
rayon = "1.10.0"

[dev-dependencies]
aligned-vec = "0.6.4"
diol = "0.13.0"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
